[gd_scene load_steps=30 format=2]

[ext_resource path="res://SISTEMA/ENTES/Enemigo.tscn" type="PackedScene" id=1]
[ext_resource path="res://RECURSOS/IMAGENES/ENEMIGOS/MiniBoss/ejemplo1.png" type="Texture" id=2]
[ext_resource path="res://RECURSOS/SHADERS/Pixelar_Sprite.gdshader" type="Shader" id=3]
[ext_resource path="res://SISTEMA/ENTES/Usados/MiniBoss/MEF_MiniBoss.gd" type="Script" id=4]
[ext_resource path="res://SISTEMA/ENTES/Usados/MiniBoss/MiniBoss.gd" type="Script" id=5]
[ext_resource path="res://SISTEMA/ENTES/Usados/MiniBoss/Area_recibir_damage.gd" type="Script" id=6]
[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/Star.png" type="Texture" id=7]
[ext_resource path="res://SISTEMA/GUI/BarraVidaBosses.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/pixelFactor = 0.35

[sub_resource type="CanvasItemMaterial" id=21]

[sub_resource type="Gradient" id=22]
offsets = PoolRealArray( 0.195122, 0.396341, 0.673781 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=23]
gradient = SubResource( 22 )

[sub_resource type="Curve" id=24]
_data = [ Vector2( 0, 0.144318 ), 0.0, 2.25698, 0, 0, Vector2( 1, 0.8625 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=25]
curve = SubResource( 24 )

[sub_resource type="Curve" id=26]
_data = [ Vector2( 0, 0 ), 0.0, -3.8984, 0, 0, Vector2( 1, 1 ), 2.16578, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 26 )

[sub_resource type="ParticlesMaterial" id=14]
resource_local_to_scene = true
trail_size_modifier = SubResource( 27 )
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.2
orbit_velocity_random = 0.29
radial_accel = -27.81
tangential_accel = -43.85
scale = 0.05
scale_curve = SubResource( 25 )
color_ramp = SubResource( 23 )
hue_variation = -0.86
hue_variation_random = 0.8

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo/Sprite/aux:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/Sprite/aux2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/Sprite/aux3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo/Sprite/aux4:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo/Sprite:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cuerpo/Sprite/aux:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 90, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Cuerpo/Sprite/aux2:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 196.667, 3.33333 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Cuerpo/Sprite/aux3:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -96, -0.666664 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Cuerpo/Sprite/aux4:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -216, 2.66667 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Cuerpo/Sprite/aux:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Cuerpo/Sprite/aux2:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Cuerpo/Sprite/aux3:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Cuerpo/Sprite/aux4:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Area_cuerpo:monitorable")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Cuerpo/Particles2D2:emitting")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Cuerpo/Particles2D:emitting")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Cuerpo/Particles2D:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -13, 19 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Cuerpo/Particles2D2:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, 20 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "aparecer"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo/Sprite/aux:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/Sprite/aux2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/Sprite/aux3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo/Sprite/aux4:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo/Sprite:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cuerpo/Sprite/aux:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 90, 0 ), Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Cuerpo/Sprite/aux2:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 196.667, 3.33333 ), Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Cuerpo/Sprite/aux3:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -96, -0.666664 ), Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Cuerpo/Sprite/aux4:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -216, 2.66667 ), Vector2( 0, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Cuerpo/Sprite/aux:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Cuerpo/Sprite/aux2:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Cuerpo/Sprite/aux3:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Cuerpo/Sprite/aux4:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Area_cuerpo:monitorable")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area_cuerpo:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=17]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area_cuerpo:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "desaparecer"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.55, 0.7, 0.85, 0.95, 1.05, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27, 34 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo/Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area_cuerpo:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/Particles2D2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo/Particles2D2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.25, 0.55, 0.7, 0.85, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 21 ), Vector2( 12, 5 ), Vector2( 12, -18 ), Vector2( -10, -25 ), Vector2( -9, -1 ), Vector2( -1, 3 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fin_invocar"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 30, 29, 28 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area_cuerpo:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/Particles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -13, -25 ), Vector2( -15, -12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/Particles2D2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 14, -24 ), Vector2( 13, -11 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo/Particles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo/Particles2D2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=18]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area_cuerpo:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/Particles2D2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo/Particles2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -13, 19 ), Vector2( -13, 5 ), Vector2( -15, -12 ), Vector2( -13, -25 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo/Particles2D2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11, 20 ), Vector2( 13, 3 ), Vector2( 12, -11 ), Vector2( 14, -24 ) ]
}

[sub_resource type="Animation" id=19]
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
}, {
"args": [  ],
"method": "CrearMina"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area_cuerpo:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=20]
length = 1.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.9, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area_cuerpo:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/Particles2D2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "impulso_traslado"
tracks/0/type = "value"
tracks/0/path = NodePath("MEF:componente")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "movimiento_levitar"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:vector_impulsos")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -40 ), Vector2( 0, 0 ), Vector2( 0, 40 ) ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 26 )

[node name="MiniBoss" instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 0
script = ExtResource( 5 )
max_vitalidad = 600
vitalidad = 600
posibles_objetos_soltar = [ "res://OBJETOS/COLECTABLES/USADOS/Orbe.tscn" ]

[node name="MEF" parent="." index="0"]
script = ExtResource( 4 )
componente = 0.0

[node name="Sprite" parent="Cuerpo" index="0"]
visible = true
material = SubResource( 1 )
position = Vector2( 0, 0 )
texture = ExtResource( 2 )
hframes = 7
vframes = 5

[node name="aux" type="Sprite" parent="Cuerpo/Sprite" index="0"]
visible = false
modulate = Color( 0, 0, 0, 0 )
show_behind_parent = true
material = SubResource( 1 )
position = Vector2( 90, 0 )
texture = ExtResource( 2 )
hframes = 7
vframes = 5
frame = 21

[node name="aux2" type="Sprite" parent="Cuerpo/Sprite" index="1"]
visible = false
modulate = Color( 0, 0, 0, 0 )
show_behind_parent = true
material = SubResource( 1 )
position = Vector2( 196.667, 3.33333 )
texture = ExtResource( 2 )
hframes = 7
vframes = 5
frame = 21

[node name="aux3" type="Sprite" parent="Cuerpo/Sprite" index="2"]
visible = false
modulate = Color( 0, 0, 0, 0 )
show_behind_parent = true
material = SubResource( 1 )
position = Vector2( -96, -0.666664 )
texture = ExtResource( 2 )
hframes = 7
vframes = 5
frame = 21

[node name="aux4" type="Sprite" parent="Cuerpo/Sprite" index="3"]
visible = false
modulate = Color( 0, 0, 0, 0 )
show_behind_parent = true
material = SubResource( 1 )
position = Vector2( -216, 2.66667 )
texture = ExtResource( 2 )
hframes = 7
vframes = 5
frame = 21

[node name="AnimatedSprite" parent="Cuerpo" index="1"]
visible = false
material = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="Cuerpo" index="2"]
material = SubResource( 21 )
position = Vector2( -13, 19 )
emitting = false
amount = 50
lifetime = 0.5
local_coords = false
process_material = SubResource( 14 )
texture = ExtResource( 7 )

[node name="Particles2D2" type="Particles2D" parent="Cuerpo" index="3"]
material = SubResource( 21 )
position = Vector2( 11, 20 )
emitting = false
amount = 50
lifetime = 0.5
local_coords = false
process_material = SubResource( 14 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" parent="." index="2"]
playback_default_blend_time = 0.2
anims/RESET = SubResource( 15 )
anims/aparecer = SubResource( 10 )
anims/camina_alante = SubResource( 16 )
anims/camina_atras = SubResource( 17 )
anims/desaparecer = SubResource( 9 )
anims/fin_invocar = SubResource( 8 )
anims/inicio_invocar = SubResource( 18 )
anims/invocar = SubResource( 19 )
anims/quieto = SubResource( 20 )

[node name="CollisionShape2D" parent="." index="4"]
position = Vector2( 0.5, -0.5 )

[node name="Label_debug" parent="." index="5"]
margin_left = -17.0
margin_top = 29.0
margin_right = 23.0
margin_bottom = 43.0

[node name="mov_pluss" type="AnimationPlayer" parent="." index="6"]
playback_default_blend_time = 0.35
anims/impulso_traslado = SubResource( 13 )
anims/movimiento_levitar = SubResource( 11 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="7"]
position = Vector2( 3, -1 )
scale = Vector2( 0.8, 0.8 )

[node name="Area_cuerpo" type="Area2D" parent="." index="8"]
collision_layer = 2
collision_mask = 0
input_pickable = false
monitoring = false
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_cuerpo" index="0"]
position = Vector2( 2, 0 )
shape = SubResource( 12 )

[node name="CanvasLayer" parent="." index="9" instance=ExtResource( 8 )]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="MEF" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="MEF" method="_on_VisibilityNotifier2D_screen_exited"]
